# infinx_andon

./: .gitignore  README.md  pyproject.toml  report_lock.txt  run  run.py
alembic/: env.py
alembic/versions/: 116a35f62994_chseparating_posts_table_user_id_.py  1fce0dff5d1b_changing_users_attribute_employee_id_to_.py  348d0e769c12_adding_duration_attribute_to_posts_table.py  5b68ffd3c11a_changing_duration_posts_table_attribute_.py  a1ed9593a627_adding_resolution_comment_parameter_.py  bda6fee9bc46_first_revision_after_cloning_repo.py
app/: __init__.py  background_tasks.py  extensions.py  models.py  schemas.py  telegram_bot.py
app/routes/: auth.py  base.py  data.py  post.py  settings.py
app/static/user_js/: Modals.js  SignupFormDataValidation.js
app/templates/: base.html  home.html  metrics.html
app/templates/data/: metrics.html  performance.html
app/templates/post/: _modals.html  create.html  history.html  macros.html  show_my_requests.html
app/templates/register/: login.html  signup.html
app/templates/settings/: _modals.html  view.html
docs/: c4-code.mmd  c4-component.mmd  c4-container.mmd  c4-context.mmd
