[project]
name = "infinx-andon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "filelock>=3.29.1",
    "flask>=3.1.3",
    "flask-apscheduler>=1.13.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
]
